<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.josemario.tripgrip_app.CrearAnuncioActivity">

    <Button
        android:id="@+id/buttonCrearAnuncio"

        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"

        android:text="@string/boton_crear_anuncio"/>

    <Button
        android:id="@+id/buttonVolver"

        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"

        android:text="@string/boton_volver" />

    <TextView
        android:id="@+id/textViewTipoAlojamiento"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/tipo_inmueble"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22dp" />

    <Spinner
        android:id="@+id/spinnerTipoALojamiento"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/textViewTipoAlojamiento"
        android:layout_marginTop="5dp"/>

    <Space
        android:id="@+id/spaceCrearAnuncio_1"

        android:layout_width="match_parent"
        android:layout_height="20dp"

        android:layout_below="@id/spinnerTipoALojamiento"/>

    <TextView
        android:id="@+id/textViewTipoHabitacion"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/spaceCrearAnuncio_1"

        android:text="@string/tipo_habitacion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22dp" />

    <Spinner
        android:id="@+id/spinnerTipoHabitacion"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/textViewTipoHabitacion"
        android:layout_marginTop="5dp" />

    <Space
        android:id="@+id/spaceCrearAnuncio_2"

        android:layout_width="match_parent"
        android:layout_height="20dp"

        android:layout_below="@id/spinnerTipoHabitacion"/>

    <TextView
        android:id="@+id/textViewUbicacion"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/spinnerTipoHabitacion"

        android:text="@string/ubicacion_hospedaje"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22dp" />

    <EditText
        android:id="@id/editTextUbicacion"

        android:layout_width="500px"
        android:layout_height="wrap_content"

        android:layout_below="@id/textViewUbicacion"
        android:hint="@string/pista_ubicacion" />

    <Button
        android:id="@+id/buttonUbicacion"

        android:layout_width="100dp"
        android:layout_height="50dp"

        android:layout_toRightOf="@id/editTextUbicacion"
        android:layout_below="@id/textViewUbicacion"

        android:text="@string/boton_buscar"/>

    <TextView
        android:id="@+id/textViewCapacidad"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/editTextUbicacion"

        android:text="@string/cantidad_huespedes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTextCapacidad"

        android:layout_width="250px"
        android:layout_height="wrap_content"

        android:layout_below="@id/textViewCapacidad" />

    <TextView
        android:id="@+id/textViewPrecio"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/editTextCapacidad"

        android:text="@string/rango_precio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/editTextPrecio"

        android:layout_width="250px"
        android:layout_height="wrap_content"

        android:layout_below="@id/textViewPrecio"
        android:hint="@string/pista_desde_hasta"/>



</RelativeLayout>
