<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.josemario.tripgrip_app.PaginaPrincipalActivity">

    <TextView
        android:id="@+id/textViewBienvenida"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:text="@string/bienvenida"
        android:textSize="35dp" />

    <Button
        android:id="@+id/buttonBuscarAnuncio"

        android:layout_width="150dp"
        android:layout_height="50dp"


        android:layout_marginBottom="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textViewBienvenida"
        android:layout_marginLeft="10dp"

        android:text="@string/boton_buscar_anuncio"/>

    <Button
        android:id="@+id/buttonCrearAnuncio"

        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="10dp"

        android:text="@string/boton_crear_anuncio"/>

    <Button
        android:id="@+id/buttonBuzonMensajes"

        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignTop="@+id/buttonBuscarAnuncio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"

        android:text="@string/boton_Mesajes" />

    <Button
        android:id="@+id/buttonSalir"

        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignTop="@+id/buttonCrearAnuncio"
        android:layout_alignEnd="@+id/buttonBuzonMensajes"

        android:text="@string/cerrar_sesion" />

    <ImageView
        android:id="@+id/imageViewPaginaPrincipal"
        android:src="@drawable/tripgrip_icon"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_above="@+id/buttonBuscarAnuncio"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp" />

</RelativeLayout>
